[workspace]
resolver = "2"
members = [
  "projects/ant-data-farm-client",
  "projects/ant-just-checking-in",
  "projects/ant-on-the-web/server",
  "projects/ant-who-tweets",
  "projects/ant-host-agent",
  "projects/ant-library",
  "projects/ant-metadata",
  "projects/ant-owning-artifacts",
  "projects/anthill", "projects/ant-fs",
]
