[workspace]
resolver = "2"
members = [
  "projects/ant-data-farm-client",
  "projects/ant-just-checking-in",
  "projects/ant-on-the-web",
  "projects/ant-who-tweets",
  "projects/ant-host-agent",
  "projects/ant-library",
  "projects/ant-library-test",
  "projects/ant-metadata",
  "projects/ant-owning-artifacts",
  "projects/anthill",
  "projects/ant-fs",
  "projects/ant-releasing-ants-into-the-wild",
  "projects/ant-zookeeper",
  "projects/ant-backing-it-up",
  "projects/ant-fs-client",
  "projects/ant-zoo-storage",
]
