[workspace]
resolver = "2"
members = [
  "projects/ant-data-farm-client",
  "projects/ant-on-the-web",
  "projects/ant-who-tweets",
  "projects/ant-host-agent",
  "projects/ant-library",
  "projects/ant-library-test",
  "projects/ant-metadata",
  "projects/anthill",
  "projects/ant-fs",
  "projects/ant-releasing-ants-into-the-wild",
  "projects/ant-zookeeper",
  "projects/ant-zookeeper-db",
  "projects/ant-backing-it-up",
  "projects/ant-fs-client",
  "projects/anthill-manifest-build",
  "projects/anthill-manifest", "projects/ant-printing-press",
  "projects/ant-archive-storage",
  "projects/ant-archive-db",
  "projects/ant-archive",
]
