[package]
name = "ant-data-farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
double-map = "0.14.0"
futures = "0.3.28"
hyper = "0.14.26"
lazy_static = "1.4.0"
postgres-types = { version = "0.2.5", features=["derive"] }
rstest = "0.17.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
testcontainers = "0.14.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace", "metrics", "cors", "normalize-path"] }
tracing = { version = "0.1.37", features = ["max_level_debug"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.4", features = ["serde", "v4"] }
validator = "0.16.1"
