[package]
name = "ant-on-twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["macros"] }
twitter-v2 = { version = "0.1.8", features = ["oauth2"] }
