[package]
name = "ant-archive-storage"
version = "1.0.0"
edition = "2021"

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["tracing", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
http = "1.3.1"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "trace",
  "catch-panic",
  "normalize-path",
  "limit",
] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
dotenv = "0.15.0"
futures = "0.3.31"
tokio-util = { version = "0.7.16", features = ["io"] }
sha2 = "0.10.9"
base64ct = { version = "1.8.0", features = ["alloc"] }
base16ct = { version = "0.3.0", features = ["alloc"] }
async-trait = "0.1"
num_enum = "0.7"
tempfile = "3"
axum-prometheus = "0.10.0"
subtle = "2.6"
metrics-exporter-prometheus = "0.18"

[dev-dependencies]
ant-library-test = { version = "1.0.0", path = "../ant-library-test" }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
stdext = "0.3.3"
