[package]
name = "ant-archive"
version = "1.0.0"
edition = "2021"

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
ant-archive-db = { version = "1.0.0", path = "../ant-archive-db" }
anyhow = "1.0.99"
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8.4", features = ["tracing", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
http = "1.3.1"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "trace",
  "catch-panic",
  "normalize-path",
  "limit",
] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base16ct = { version = "0.3.0", features = ["alloc"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
aes-gcm = { version = "0.10", features = ["std"] }
hkdf = "0.12"
rand = "0.8"
sha2 = "0.10.9"
http-body-util = "0.1"
bytes = "1.12.0"

[dev-dependencies]
ant-library-test = { version = "1.0.0", path = "../ant-library-test" }
ant-archive-storage = { version = "1.0.0", path = "../ant-archive-storage" }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
stdext = "0.3.3"
