[package]
name = "ant-backing-it-up"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "fetch-backup"
path = "src/bin/fetch.rs"

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
anyhow = "1.0.99"
axum = { version = "0.8.4", features = [
  "tracing",
  "json",
  "macros",
  "multipart",
] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
http = "1.3.1"
hyper = "1.7.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "fs",
  "trace",
  "metrics",
  "cors",
  "normalize-path",
  "catch-panic",
  "limit",
] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
tracing-subscriber = "0.3.19"
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
tokio-util = { version = "0.7.16", features = ["io"] }
futures = "0.3.31"
http-body-util = "0.1.3"
sha2 = "0.10.9"
base64ct = { version = "1.8.0", features = ["alloc"] }
base16ct = { version = "0.3.0", features = ["alloc"] }
chrono = { version = "0.4.42", features = ["serde"] }
postgresql_commands = "0.20.0"
bb8-postgres = "0.9.0"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
ant-fs-client = { version = "0.1.0", path = "../ant-fs-client" }
serde_json = "1.0.145"
aes-gcm = "0.10.3"
reqwest = "0.12.23"
stdext = "0.3.3"
zip = { version = "5.1.1", features = ["zstd"] }
clap = { version = "4.5.49", features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
stdext = "0.3.3"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
