[package]
name = "ant-backing-it-up"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "fetch-backup"
path = "src/bin/fetch.rs"

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
anyhow = "1.0.99"
axum = { version = "0.8.4", features = [
  "tracing",
  "json",
  "macros",
  "multipart",
] }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "fs",
  "trace",
  "metrics",
  "cors",
  "normalize-path",
  "catch-panic",
  "limit",
] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
dotenv = "0.15.0"
futures = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
postgresql_commands = "0.20.0"
bb8-postgres = "0.9.0"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
ant-fs-client = { version = "0.1.0", path = "../ant-fs-client" }
serde_json = "1.0.145"
aes-gcm = "0.10.3"
reqwest = { version = "0.12.23", features = [
  "json",
  "multipart",
  "rustls-tls",
] }
stdext = "0.3.3"
zip = { version = "5.1.1", features = ["zstd"] }
clap = { version = "4.5.49", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.9"
humansize = "2.1.3"

[dev-dependencies]
stdext = "0.3.3"
