[package]
name = "ant-data-farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
postgres-types = { version = "0.2.9", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = [
  "with-uuid-1",
  "with-serde_json-1",
  "with-chrono-0_4",
  "array-impls",
  "with-time-0_3",
] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
testcontainers = "0.25.0"
rstest = "0.25.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
which = "8.0.2"
