[package]
name = "ant-fs-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"

[dev-dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }
