[package]
name = "ant-host-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["tracing", "json", "multipart"] }
axum-extra = "0.10.1"
dotenv = "0.15.0"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "fs",
  "trace",
  "metrics",
  "cors",
  "normalize-path",
  "limit",
  "catch-panic",
] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
reqwest = { version = "0.12.15", features = [
  "json",
  "multipart",
  "rustls-tls",
] }
anyhow = "1.0.98"
futures-util = "0.3.31"
tar = "0.4.44"
ant-library = { version = "1.0.0", path = "../ant-library" }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
zbus_systemd = { version = "0.25701.0", features = ["systemd1"] }
stdext = "0.3.3"
flate2 = "1.1.5"
bollard = "0.19.3"
tokio-util = "0.7.17"
humansize = "2.1.3"
async-trait = "0.1.89"
tempfile = "3.27.0"
dircpy = "0.3.20"
handlebars = "6.4.0"
anthill-manifest = { version = "0.1.0", path = "../anthill-manifest" }

[dev-dependencies]
ant-library-test = { path = "../ant-library-test" }
assertables = "9.9.0"
tar = "0.4.44"
