[package]
name = "ant-just-checking-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
cronjob = "0.4.17"
futures-util = "0.3.28"
reqwest = { version = "0.11.13", features = ["blocking"] }
tokio = { version = "1.28.2", features=["rt", "macros"] }
tokio-cron-scheduler = "0.9.4"
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"]}
 
[[bin]]
name = "ant-just-checking-in"
path = "src/main.rs"
