[package]
name = "ant-just-checking-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
cronjob = "0.4.17"
futures-util = "0.3.30"
reqwest = { version = "0.11.23", features = ["blocking"] }
tokio = { version = "1.35.1", features=["rt", "macros"] }
tokio-cron-scheduler = "0.9.4"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"]}
 
[[bin]]
name = "ant-just-checking-in"
path = "src/main.rs"
