[package]
name = "ant-just-checking-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ant-data-farm = { version = "0.1.0", path = "../ant-data-farm-client" }
ant-host-agent = { version = "0.1.0", path = "../ant-host-agent" }
ant-library = { version = "1.0.0", path = "../ant-library" }
anyhow = "1.0.98"
chrono = "0.4.41"
cronjob = "0.4.17"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.45.0", features = ["rt", "macros"] }
tokio-cron-scheduler = "0.14.0"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

[[bin]]
name = "ant-just-checking-in"
path = "src/main.rs"
