[package]
name = "ant-library-test"
version = "1.0.0"
edition = "2024"

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
axum = "0.8.7"
bytes = "1.11.0"
http = "1.4.0"
postgresql_embedded = "0.20.0"
reqwest = "0.12.25"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"

[dev-dependencies]
postgresql_embedded = "0.20.0"
