[package]
name = "ant-library-test"
version = "1.0.0"
edition = "2024"

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
anyhow = "1.0.102"
axum = "0.8.7"
bytes = "1.11.0"
http = "1.4.0"
portpicker = "0.1.1"
postgresql_embedded = "0.20.0"
reqwest = { version = "0.12.25", features = ["rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.27.0"
tokio = "1.48.0"
tracing = "0.1.44"

[dev-dependencies]
postgresql_embedded = "0.20.0"
