[package]
name = "ant-library"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["tracing", "json"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-macros = "0.5.0"
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
bytes = "1.10.1"
dotenv = "0.15.0"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
reqwest = { version = "0.12.25", default-features = false, features = [
  "json",
  "stream",
  "multipart",
  "rustls-tls",
] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.0"
tokio-postgres = "0.7.15"
tower = "0.5.2"
tracing = { version = "0.1.41", features = ["max_level_debug"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0"
