[package]
name = "ant-library"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["tracing", "json"] }
axum-extra = { version = "0.10.1", features = [
  "typed-header",
  "typed-routing",
] }
base64ct = "1.8.3"
bb8 = "0.9.1"
dotenv = "0.15.0"
dotenvy = "0.15.7"
http = "1.3.1"
http-body-util = "0.1.3"
openssl = { version = "0.10.81", features = ["vendored"] }
password-hash = "0.6.1"
rand_core = "0.10.1"
reqwest = { version = "0.12.25", default-features = false, features = [
  "json",
  "stream",
  "multipart",
  "rustls-tls",
] }
rs-consul = "0.14.0"
rsa = "0.9.10"
rustls = { version = "0.23", features = ["ring"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.18.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = "1.45.0"
tokio-postgres = "0.7.15"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
ant-library-test = { path = "../ant-library-test" }
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0"
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
local-ip-address = "0.6.13"
postgresql_embedded = "0.20.2"

[build-dependencies]
serde_json = "1.0.140"
