[package]
name = "ant-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum_typed_multipart = "0.16.2"
home = "0.5.11"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
