[package]
name = "ant-on-the-web"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["tracing", "json", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
axum-macros = "0.5.0"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
double-map = "0.14.0"
futures = "0.3.31"
hyper = "1.6.0"
postgres-types = { version = "0.2.9", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = [
  "with-uuid-1",
  "with-serde_json-1",
  "with-chrono-0_4",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "fs",
  "trace",
  "metrics",
  "cors",
  "normalize-path",
  "catch-panic",
] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = "0.20.0"
serde_derive = "1.0.219"
ant-data-farm = { path = "../ant-data-farm-client" }
ant-library = { path = "../ant-library" }
anyhow = "1.0.98"
argon2 = "0.5.3"
phonenumber = "0.3.7"
email_address = "0.2.9"
regex = "1.11.1"
jsonwebtoken = "9.3.1"
http = "1.3.1"
tower_governor = { version = "0.7.0", features = ["tracing"] }
twilio = "1.1.0"
rand = "0.9.2"
async-trait = "0.1.88"
cookie = "0.18.1"
mailjet-rs = "0.3.0"
openssl = { version = "0.10", features = ["vendored"] }
tower-cookies = "0.11.0"

[dev-dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
mime = "0.3.17"
postgresql_embedded = "0.18.3"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
