[package]
name = "ant-on-the-web"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["tracing", "json", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "fs",
  "trace",
  "metrics",
  "cors",
  "normalize-path",
  "catch-panic",
] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
ant-data-farm = { path = "../ant-data-farm-client" }
ant-library = { path = "../ant-library" }
anyhow = "1.0.98"
phonenumber = "0.3.7"
email_address = "0.2.9"
regex = "1.11.1"
jsonwebtoken = "9.3.1"
http = "1.3.1"
tower_governor = { version = "0.7.0", features = ["tracing"] }
twilio = "1.1.0"
rand = "0.9.2"
async-trait = "0.1.88"
cookie = "0.18.1"
mailjet-rs = "0.3.0"
tower-cookies = "0.11.0"
serde-json-assert = "0.4.0"
reqwest = "0.13.4"
async-stripe = { version = "0.41.0", features = [
  "issuing",
  "runtime-tokio-hyper-rustls",
  "webhook-events",
] }

[dev-dependencies]
ant-library-test = { path = "../ant-library-test" }
assertables = "9.9.0"
http = "1.3.1"
mime = "0.3.17"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
