[package]
name = "ant-owning-artifacts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing", "json"] }
axum-extra = "0.7.4"
axum-macros = "0.3.7"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
double-map = "0.14.0"
futures = "0.3.28"
hyper = "0.14.26"
postgres-types = { version = "0.2.5", features=["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace", "metrics", "cors", "normalize-path"] }
tracing = { version = "0.1.37", features = ["max_level_debug"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.4", features = ["serde", "v4"] }
validator = "0.16.1"
ant-data-farm = { path = "../ant-data-farm" }
ant-host-agent = { path = "../ant-host-agent" }
ant-metadata = { path = "../ant-metadata" }
tokio-util = "0.7.8"
anyhow = "1.0.72"
git2 = "0.17.2"
anthill = { path = "../anthill" }
home = "0.5.5"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
