[package]
name = "ant-releasing-ants-into-the-wild"
version = "0.1.0"
edition = "2024"

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
ant-on-the-web = { version = "1.0.0", path = "../ant-on-the-web/server" }
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
rand = "0.9.2"
reqwest = "0.12.23"
serde = "1.0.225"
serde_json = "1.0.145"
tokio = "1.47.1"
