[package]
name = "ant-who-tweets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.45.0", features = ["macros"] }
twitter-v2 = { version = "0.1.8", features = ["oauth2"] }
rand = "0.9.1"
tokio-cron-scheduler = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
ant-data-farm = { path = "../ant-data-farm-client" }
chrono = "0.4.41"
anyhow = "1.0.98"
ant-library = { version = "1.0.0", path = "../ant-library" }
