[package]
name = "ant-zookeeper-db"
version = "0.1.0"
edition = "2024"

[dependencies]
ant-library = { version = "1.0.0", path = "../ant-library" }
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
stdext = "0.3.3"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
