[package]
name = "anthill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = { version = "1.0.26", features = ["serde"] }
ant-metadata = { path = "../ant-metadata" }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
command-macros = "0.2.9"
tokio = { version = "1.45.0", features = ["tokio-macros", "full"] }
anyhow = "1.0.98"
cargo_metadata = "0.19.2"
