[package]
name = "anthill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.140"
tracing = "0.1.41"
tokio = { version = "1.45.0", features = ["tokio-macros", "full"] }
anyhow = "1.0.98"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
ant-library = { version = "1.0.0", path = "../ant-library" }
git2 = "0.20.4"
chrono = "0.4.44"
tempfile = "3.27.0"
tar = "0.4.45"
humansize = "2.1.3"
futures = "0.3.32"
dircpy = "0.3.20"
ant-zookeeper = { version = "1.0.0", path = "../ant-zookeeper" }
flate2 = "1.1.9"
bollard = "^0.19.3"
anthill-manifest = { version = "0.1.0", path = "../anthill-manifest" }
async-tempfile = "0.8.0"
tokio-tar = "0.3.1"
async-compression = { version = "0.4.42", features = ["gzip", "tokio"] }
ignore = "0.4.26"
pathdiff = "0.2.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
